# variable-projection

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  benchmark_precompute.cpp  benchmark_schur.cpp  benchmark_solver.cpp
examples/: CMakeLists.txt  config.json  cora_vis_test.cpp  cost_residual_plots.py  cost_residual_select.py  experiment_analysis.py  experiment_analysis_with_gstam.py  experiment_utils.hpp  gpu_paper_experiments.cpp  gpu_vs_cpu_median_speedup.py  grid3d_preprocess_breakdown.py  grid3d_sweep.py  grid3d_sweep_plots.py  main.cpp  optimizer_diagnostics.cpp  paper_experiments.cpp  sfm_sweep.py  sphere_sweep.py  standard_precompute_times.py  standard_speedup_plots.py  sweep_plots.py  sweep_plots_lines.py  tables.py  test_scaled_stiefel.cpp
examples/data/: check_overflow_nan.py  cumtime_summary_long.csv  cumtime_summary_wide.csv  experiment_results.json  sfm_data_link.txt
examples/data/analysis/: cpu_table.csv  gpu_table.csv  grid3d_sweep_results.json  preprocess_times.json  standard_precompute_times.json  sweep_results.json
examples/data/grid3d_sweep/: experiment_results.json  gpu_experiment_results.json
examples/data/pgo/: experiment_results.json  results.json  smallGrid3D.pyfg  sphere2500.pyfg
examples/data/pgo/M3500/: M3500.pyfg  gpu_results.json  results.json
examples/data/pgo/MIT/: MIT.pyfg  gpu_results.json  results.json
examples/data/pgo/city10000/: city10000.pyfg  gpu_results.json  results.json
examples/data/pgo/grid3D/: gpu_results.json  results.json
examples/data/pgo/inits/: rank2_init1.txt  rank2_init10.txt  rank2_init2.txt  rank2_init3.txt  rank2_init4.txt  rank2_init5.txt  rank2_init6.txt  rank2_init7.txt  rank2_init8.txt  rank2_init9.txt  rank3_init1.txt  rank3_init10.txt  rank3_init2.txt  rank3_init3.txt  rank3_init4.txt  rank3_init5.txt  rank3_init6.txt  rank3_init7.txt  rank3_init8.txt  rank3_init9.txt  rank4_init1.txt  rank4_init10.txt  rank4_init2.txt  rank4_init3.txt  rank4_init4.txt  rank4_init5.txt  rank4_init6.txt  rank4_init7.txt  rank4_init8.txt  rank4_init9.txt  rank5_init1.txt  rank5_init10.txt  rank5_init2.txt  rank5_init3.txt  rank5_init4.txt  rank5_init5.txt  rank5_init6.txt  rank5_init7.txt  rank5_init8.txt  rank5_init9.txt
examples/data/pgo/intel/: gpu_results.json  intel.pyfg  results.json
examples/data/pgo/parking-garage/: gpu_results.json  parking-garage.pyfg  results.json
examples/data/pgo/smallGrid3D/: gpu_results.json  results.json
examples/data/pgo/sphere2500/: gpu_results.json  results.json  sphere2500.pyfg
examples/data/pgo/tinyGrid3D/: gpu_results.json  results.json  tinyGrid3D.pyfg
examples/data/pgo/torus3D/: gpu_results.json  results.json  torus3D.pyfg
examples/data/raslam/: experiment_results.json
examples/data/raslam/factor_graph_small/: gpu_results.json  results.json
examples/data/raslam/mit_outfinite/: results.json
examples/data/raslam/mrclam/: experiment_results.json  gpu_experiment_results.json
examples/data/raslam/plaza1/: experiment_results.json  gpu_results.json  results.json
examples/data/raslam/plaza2/: gpu_results.json  results.json
examples/data/raslam/range_aided_slam_test_2d/: gpu_results.json  range_aided_slam_test_2d.pyfg  results.json
examples/data/raslam/single_drone/: experiment_results.json  gpu_results.json  results.json
examples/data/raslam/tiers/: gpu_results.json  results.json
examples/data/sfm/: .gitignore  clean_sfm_formats.py  shift_pyfg_measurements.py
examples/data/sfm/IMC-gate/: gpu_results.json  results.json
examples/data/sfm/IMC-rome/: gpu_results.json  results.json
examples/data/sfm/IMC-temple/: gpu_results.json  results.json
examples/data/sfm/MipNerf-garden/: gpu_results.json  results.json
examples/data/sfm/MipNerf-kitchen/: gpu_results.json  results.json
examples/data/sfm/MipNerf-room/: gpu_results.json  results.json
examples/data/sfm/Replica-REPoffice0/: gpu_results.json  results.json
examples/data/sfm/Replica-REPoffice0_100/: gpu_results.json  results.json
examples/data/sfm/Replica-REPoffice1/: gpu_results.json  results.json
examples/data/sfm/Replica-REPoffice1_100/: gpu_results.json  results.json
examples/data/sfm/Replica-REProom0/: gpu_results.json  results.json
examples/data/sfm/Replica-REProom0_100/: gpu_results.json  results.json
examples/data/sfm/Replica-REProom1/: gpu_results.json  results.json
examples/data/sfm/Replica-REProom1_100/: gpu_results.json  results.json
examples/data/sfm/TUM-computer-R/: gpu_results.json  results.json
examples/data/sfm/TUM-computer-T/: gpu_results.json  results.json
examples/data/sfm/TUM-desk/: gpu_results.json  results.json
examples/data/sfm/TUM-room/: gpu_results.json  results.json
examples/data/sfm/bal-1934/: gpu_results.json  results.json
examples/data/sfm/bal-392/: gpu_results.json  results.json
examples/data/sfm/bal-93/: gpu_results.json  results.json
examples/data/sfm_sweep/: experiment_results.json  gpu_experiment_results.json
examples/data/snl/: city10000_snl.pyfg  grid3D_snl.pyfg  intel_snl.pyfg  parking-garage_snl.pyfg  sphere2500_snl.pyfg  tinyGrid3D_snl.pyfg
examples/data/snl/M3500_snl/: M3500_snl.pyfg  gpu_results.json  results.json
examples/data/snl/MIT_snl/: MIT_snl.pyfg  gpu_results.json  results.json
examples/data/snl/city10000_snl/: gpu_results.json  results.json
examples/data/snl/grid3D_snl/: gpu_results.json  results.json
examples/data/snl/intel_snl/: gpu_results.json  results.json
examples/data/snl/parking-garage_snl/: gpu_results.json  results.json
examples/data/snl/smallGrid3D_snl/: gpu_results.json  results.json  smallGrid3D_snl.pyfg
examples/data/snl/sphere2500_snl/: gpu_results.json  results.json
examples/matlab/: exploration.m  viz.m
examples/matlab/separableUpdate/: Q21.mtx  Q22.mtx  Ycons.mtx  Yfull.mtx
examples/tables/: table_metrics.csv
tests/: CMakeLists.txt  test_convergence.cpp  test_explicit_mrclam.cpp  test_fd_gradient.cpp  test_gauge_handling.cpp  test_init_mrclam.cpp  test_init_mrclam2.cpp  test_mrclam2_direct.cpp  test_schur_vs_explicit.cpp
(+2055 files in other folders)
