if(${ENABLE_PROFILING})
  target_compile_definitions(varpro_example PRIVATE GPERFTOOLS)
  target_link_libraries(varpro_example profiler)
endif()

if(${PERFORM_EXPERIMENTS})
  message(STATUS "Building paper_experiments executable")
  add_executable(paper_experiments paper_experiments.cpp)
  target_link_libraries(paper_experiments VARPRO)
  target_include_directories(paper_experiments PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
  if(${ENABLE_PROFILING})
    target_compile_definitions(paper_experiments PRIVATE GPERFTOOLS)
    target_link_libraries(paper_experiments profiler)
  endif()
endif()

message(STATUS "Building main varpro_example command-line executable in directory ${EXECUTABLE_OUTPUT_PATH}\n")
